minor ui updates

--- a/index.html
+++ b/index.html
@@ -316,6 +316,10 @@
 			<i class="fab fa-github"></i>
 		</button>
 
+		<br>
+
+		<button onclick="window.open('projects.html')" class="btn btn-dark my-2">View My Projects</button>
+
 		<hr>
 
 		<h6>About</h6>
