--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
 
 	</div>
 
-	<h5 class="mx-5">Below you can find some of my projects. For each project, I designed and created the application, all promotional images, icons and assets, descriptions, and videos.</h5>
+	<h5 class="mx-5">Below you can find some of my projects. For each project, I designed and created the application, all promotional images, icons and assets, descriptions, and videos. <span class="text-muted">Hover or click a project to get started.</span></h5>
 	<br>
 
 	<div id="projects-div">
