update for cta button open to same tab

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
 		<br>
 
-		<button onclick="window.open('projects.html')" class="btn btn-dark my-2">View My Projects</button>
+		<button onclick="window.open('projects.html','_self')" class="btn btn-dark my-2">View My Projects</button>
 
 		<hr>
 
