css changes, prettier js

--- a/index.html
+++ b/index.html
@@ -696,30 +696,32 @@
 
 			<button
 				onclick="window.open('projects.html','_self')"
-				class="btn btn-dark my-2"
+				class="btn btn-dark my-2 px-4"
 			>
 				View My Projects
 			</button>
 
 			<hr />
 
-			<div class="text-left">
+			<div class="text-left" style="line-height: 1.75rem">
 				<h6>About</h6>
 				<p class="my-3">
-					I am a front end web developer located in San Diego, CA. I
-					graduated from San Diego State University with a major in
-					computer science and a minor in creative writing. I am a
-					quick learner, and I work carefully and efficiently. I pride
-					myself on designing simple, elegant, and responsive user
-					interfaces. Feel free to browse my
+					I am a full stack web and mobile developer located in San
+					Diego, CA. I graduated from San Diego State University with
+					a major in computer science and a minor in creative writing.
+					I pride myself on designing simple, elegant, and responsive
+					user interfaces. I am passionate about UI, UX, and design. I
+					also love typography and brand identity. Feel free to browse
+					my
 					<a href="projects.html">projects</a>. You can contact me
 					using the buttons above.
 				</p>
 				<h6>Interests</h6>
 				<p class="my-3">
-					I enjoy board games, card games, creative writing,
-					basketball, running, video editing, graphic design, and web
-					development.
+					I like to write, edit videos, and design logos, brand
+					identity systems, and application mockups. I enjoy all
+					things board game and card game, and also play a few video
+					games. I am also a huge basketball fan.
 				</p>
 			</div>
 		</div>
