restyle menu and links
also removed nametag chance : ( it's for the best

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<script type="text/javascript" src="js/scripts.js"></script>
 	</head>
 	<body>
-		<div id="top-container">
+		<div id="top-container" class="container">
 			<button
 				id="menu-btn"
 				class="hamburger hamburger--squeeze btn"
@@ -662,7 +662,9 @@
 				<h1 id="fade-in-heading">Justin Golden</h1>
 			</div>
 
-			<h5>Programmer. &nbsp; Writer. &nbsp; Graphic Designer.</h5>
+			<h5 class="my-3">
+				Programmer. &nbsp; Writer. &nbsp; Graphic Designer.
+			</h5>
 
 			<button
 				id="mail-btn"
@@ -696,14 +698,14 @@
 
 			<button
 				onclick="window.open('projects.html','_self')"
-				class="btn btn-dark my-2 px-4"
+				class="btn btn-dark my-3 px-4"
 			>
 				View My Projects
 			</button>
 
 			<hr />
 
-			<div class="text-left" style="line-height: 1.75rem">
+			<div class="text-left paragraphs">
 				<h6>About</h6>
 				<p class="my-3">
 					I am a full stack web and mobile developer located in San
