--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
 		<script type="text/javascript" src="js/project-scripts.js"></script>
 	</head>
 	<body>
-		<div id="top-container">
+		<div id="top-container" class="container">
 			<button
 				id="menu-btn"
 				class="hamburger hamburger--squeeze btn"
@@ -103,28 +103,30 @@
 			<hr />
 		</div>
 
-		<h5 class="mx-5 font-weight-normal">
-			Below you can find some of my projects. For each project, I designed
-			and created the application, all promotional images, icons and
-			assets, descriptions, and videos.
-			<u>Hover or click a project to get started.</u>
-		</h5>
-		<br />
+		<div class="container">
+			<h5 class="font-weight-normal paragraphs">
+				Below you can find some of my projects. For each project, I
+				designed and created the application, all promotional images,
+				icons and assets, descriptions, and videos.
+				<b>Hover or click a project to get started.</b>
+			</h5>
+			<br />
 
-		<div id="projects-div">
-			<div id="website-div" class="row">
-				<div class="col-12">
-					<h1>Websites</h1>
+			<div id="projects-div">
+				<div id="website-div" class="row">
+					<div class="col-12">
+						<h1>Websites</h1>
+					</div>
 				</div>
-			</div>
-			<div id="web-app-div" class="row">
-				<div class="col-12">
-					<h1>Web Apps</h1>
+				<div id="web-app-div" class="row">
+					<div class="col-12">
+						<h1>Web Apps</h1>
+					</div>
 				</div>
-			</div>
-			<div id="chrome-extension-div" class="row">
-				<div class="col-12">
-					<h1>Chrome Extensions</h1>
+				<div id="chrome-extension-div" class="row">
+					<div class="col-12">
+						<h1>Chrome Extensions</h1>
+					</div>
 				</div>
 			</div>
 		</div>
