--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
 		<script type="text/javascript" src="js/project-scripts.js"></script>
 	</head>
 	<body>
-		<div id="top-container" class="container">
+		<div id="top-container">
 			<button
 				id="menu-btn"
 				class="hamburger hamburger--squeeze btn"
@@ -70,7 +70,9 @@
 			<img id="profile-img" src="img/profile/1.png" draggable="false" />
 			<h1>Justin Golden</h1>
 
-			<h5>Programmer. &nbsp; Writer. &nbsp; Graphic Designer</h5>
+			<h5 class="my-3 font-weight-light">
+				Programmer. &nbsp; Writer. &nbsp; Graphic Designer.
+			</h5>
 
 			<button
 				id="mail-btn"
@@ -128,6 +130,7 @@
 						<h1>Chrome Extensions</h1>
 					</div>
 				</div>
+				<!-- todo: android apps, logos, brand identity systems, writings, articles, artwork -->
 			</div>
 		</div>
 	</body>
