update projects css
update css for flipcard, modals

remove fade text in from projects

minor updates to project descriptions

add link btns and small nav for project categories

--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
 
 			<hr />
 
-			<div class="text-left paragraphs">
+			<div class="text-left paragraphs fade-in-text">
 				<h6>About</h6>
 				<p class="my-3">
 					I am a full stack web and mobile developer located in San
