--- a/projects.html
+++ b/projects.html
@@ -102,32 +102,68 @@
 				<i class="fab fa-github"></i>
 			</button>
 
-			<hr />
+			<!-- <hr /> -->
 		</div>
 
 		<div class="container">
-			<h5 class="font-weight-normal paragraphs">
+			<p
+				class="font-weight-normal paragraphs py-3"
+				style="
+					border-top: 2px solid #eee;
+					border-bottom: 2px solid #eee;
+				"
+			>
+				<b>Projects</b><br />
 				Below you can find some of my projects. For each project, I
 				designed and created the application, all promotional images,
 				icons and assets, descriptions, and videos.
 				<b>Hover or click a project to get started.</b>
-			</h5>
+			</p>
+			<div class="mt-2 pt-2">
+				<a class="mr-4" href="#websites">Websites</a>
+				<a class="mr-4" href="#web-apps">Web Apps</a>
+				<a class="mr-4" href="#chrome-extensions">Chrome Extensions</a>
+			</div>
 			<br />
 
 			<div id="projects-div">
-				<div id="website-div" class="row">
+				<div id="websites" class="row">
 					<div class="col-12">
-						<h1>Websites</h1>
+						<h1>
+							<a
+								class="btn btn-dark mx-2 link-btn"
+								href="#websites"
+							>
+								<i class="fas fa-link"></i>
+							</a>
+							Websites
+						</h1>
 					</div>
 				</div>
-				<div id="web-app-div" class="row">
+				<div id="web-apps" class="row">
 					<div class="col-12">
-						<h1>Web Apps</h1>
+						<h1>
+							<a
+								class="btn btn-dark mx-2 link-btn"
+								href="#web-apps"
+							>
+								<i class="fas fa-link"></i>
+							</a>
+							Web Apps
+						</h1>
 					</div>
 				</div>
-				<div id="chrome-extension-div" class="row">
+				<div id="chrome-extensions" class="row">
 					<div class="col-12">
-						<h1>Chrome Extensions</h1>
+						<h1>
+							<a
+								class="btn btn-dark mx-2 link-btn"
+								href="#chrome-extensions"
+							>
+								<i class="fas fa-link"></i>
+							</a>
+							Chrome Extensions
+						</h1>
 					</div>
 				</div>
 				<!-- todo: android apps, logos, brand identity systems, writings, articles, artwork -->
