--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
 				<!-- <a href="#">Clients</a> -->
 			</nav>
 
-			<img id="profile-img" src="img/profile/1.png" draggable="false" />
+			<img id="profile-img" src="img/profile/3.png" draggable="false" />
 			<h1>Justin Golden</h1>
 
 			<h5 class="my-3 font-weight-light">
@@ -106,17 +106,14 @@
 		</div>
 
 		<div class="container">
+			<h3 class="pt-3" style="border-top: 2px solid #eee">Projects</h3>
 			<p
-				class="font-weight-normal paragraphs py-3"
-				style="
-					border-top: 2px solid #eee;
-					border-bottom: 2px solid #eee;
-				"
+				class="font-weight-normal py-3"
+				style="border-bottom: 2px solid #eee"
 			>
-				<b>Projects</b><br />
-				Below you can find some of my projects. For each project, I
-				designed and created the application, all promotional images,
-				icons and assets, descriptions, and videos.
+				Below you can browse some of my projects. For each project, I am
+				the sole maintainer and creator for the application, as well as
+				any promotional images, icons, assets, descriptions, and videos.
 				<b>Hover or click a project to get started.</b>
 			</p>
 			<div class="mt-2 pt-2">
