--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>Justin Golden's Portfolio</title>
 
@@ -49,7 +49,7 @@
 			<button
 				id="menu-btn"
 				class="hamburger hamburger--squeeze btn"
-				type="button"
+				aria-label="Menu"
 			>
 				<span class="hamburger-box">
 					<span class="hamburger-inner" />
