--- a/projects.html
+++ b/projects.html
@@ -120,6 +120,7 @@
 				<a class="mr-4" href="#websites">Websites</a>
 				<a class="mr-4" href="#web-apps">Web Apps</a>
 				<a class="mr-4" href="#chrome-extensions">Chrome Extensions</a>
+				<a class="mr-4" href="#art">Art</a>
 			</div>
 			<br />
 
@@ -160,6 +161,19 @@
 								<i class="fas fa-link"></i>
 							</a>
 							Chrome Extensions
+						</h1>
+					</div>
+				</div>
+				<div id="art" class="row">
+					<div class="col-12">
+						<h1>
+							<a
+								class="btn btn-dark mx-2 link-btn"
+								href="#art"
+							>
+								<i class="fas fa-link"></i>
+							</a>
+							Art
 						</h1>
 					</div>
 				</div>
