Remove many deps from home

--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
         <img id="profile-img" src="img/profile/3.png" draggable="false" />
         <h1>Justin Golden</h1>
 
-        <h5 class="my-3 font-weight-light">
+        <h5 class="font-weight-light" style="margin: 1rem 0;">
             Programmer. &nbsp; Writer. &nbsp; Graphic Designer.
         </h5>
 
