--- a/index.html
+++ b/index.html
@@ -403,22 +403,22 @@
         <!-- Programmer. &nbsp; Writer. &nbsp; Graphic Designer. -->
         <h5 id="subtitle" style="font-weight: 300; font-size: 1.25rem; margin: 1rem 0;"></h5>
         <div id="top-btns">
-            <button id="mail-btn" class="btn btn-dark" style="margin: 0 0.5rem;" title="Email me at justingolden@rgbstudios.org">
+            <a href="mailto:justingolden@rgbstudios.org" target="_blank" class="btn btn-dark" style="margin: 0 0.5rem;" title="Email me at justingolden@rgbstudios.org">
                 <svg style="width: 1.5rem; height: 1.5rem;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
-            </button>
-            <button id="linkedin-btn" class="btn btn-dark" style="margin: 0 0.5rem;" title="View my LinkedIn">
+            </a>
+            <a href="https://www.linkedin.com/in/justingolden21/" target="_blank" class="btn btn-dark" style="margin: 0 0.5rem;" title="View my LinkedIn">
                 <svg style="width: 1.5rem; height: 1.5rem;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
-            </button>
-            <button id="github-btn" class="btn btn-dark" style="margin: 0 0.5rem;" title="View my GitHub">
+            </a>
+            <a href="https://github.com/justingolden21/" target="_blank" class="btn btn-dark" style="margin: 0 0.5rem;" title="View my GitHub">
                 <svg style="width: 1.5rem; height: 1.5rem;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
-            </button>
+            </a>
 
             <br />
 
-            <button onclick="window.open('projects.html','_self')" class="btn btn-dark" style="margin: 1rem 0;"
+            <a href="projects.html" class="btn btn-dark" style="margin: 1rem 0;"
                 style="letter-spacing: 0.1rem">
                 View Projects
-            </button>
+            </a>
         </div>
 
         <hr />
