Vanilla css fade in name

--- a/index.html
+++ b/index.html
@@ -395,8 +395,10 @@
         <hr />
 
         <div id="nametag">
-            <h3 class="nametag-text">Hello</h3>
-            <h5 class="nametag-text">my name is</h5>
+            <div class="nametag-text">
+                <h3>Hello</h3>
+                <h5>my name is</h5>
+            </div>
             <h1 id="name-heading">Justin Golden</h1>
         </div>
 
