--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
     <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
         integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous" /> -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script> -->
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
 
@@ -64,7 +64,9 @@
             <!-- <a href="#">Clients</a> -->
         </nav>
 
-        <img id="profile-img" src="img/profile/3.png" draggable="false" />
+        <a href="index.html">
+            <img id="profile-img" src="img/profile/3.png" draggable="false" />
+        </a>
         <h1>Justin Golden</h1>
 
         <h5 style="margin: 1rem 0;">
