Fix link styles

--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
     <hr />
 
     <p>If you'd like to go home, please click the button below:</p>
-    <a href="index.html" class="btn btn-dark btn-lg" style="margin: 1rem 0;">
+    <a href="index.html" class="btn btn-dark btn-lg" style="margin: 1rem 0; text-decoration: none;">
         <svg style="width: 1.5rem; height: 1.5rem;" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"></path>
           </svg>
@@ -36,7 +36,7 @@
     </a>
 
     <p>If you believe this is a mistake, feel free to email me:</p>
-    <a href="mailto:justingolden@rgbstudios.org" class="btn btn-dark btn-lg" style="margin: 1rem 0;">
+    <a href="mailto:justingolden@rgbstudios.org" class="btn btn-dark btn-lg" style="margin: 1rem 0; text-decoration: none;">
         <svg style="width: 1.5rem; height: 1.5rem;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
         Contact
     </a>
