--- a/index.html
+++ b/index.html
@@ -51,9 +51,6 @@
                 <svg style="width: 1.5rem; height: 1.5rem;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-pen-tool"><path d="M12 19l7-7 3 3-7 7-3-3z"></path><path d="M18 13l-1.5-7.5L2 2l3.5 14.5L13 18l5-5z"></path><path d="M2 2l7.586 7.586"></path><circle cx="11" cy="11" r="2"></circle></svg>    
                 Projects
             </a>
-
-
-            <!-- <a href="#">Clients</a> -->
         </nav>
 
         <div style="display: flex; gap: 1rem;">
@@ -409,8 +406,7 @@
 
             <br />
 
-            <a href="projects.html" class="btn btn-dark" style="margin: 1rem 0;"
-                style="letter-spacing: 0.1rem">
+            <a href="projects.html" class="btn btn-dark" style="margin: 1rem 0; text-decoration: none;">
                 View Projects
             </a>
         </div>
@@ -427,7 +423,7 @@
                 user interfaces. I am passionate about UI, UX, and design. I
                 also love typography and brand identity. Feel free to browse
                 my
-                <a href="projects.html">projects</a>. You can contact me
+                <a href="projects.html" class="a">projects</a>. You can contact me
                 using the buttons above.
             </p>
             <h3 style="font-size: 1.75rem;">Interests</h3>
