--- a/projects.html
+++ b/projects.html
@@ -87,10 +87,10 @@
             <b>Hover or click a project to get started.</b>
         </p>
         <div style="margin-top: 1rem;">
-            <a style="margin-right: 1.5rem;" href="#websites">Websites</a>
-            <a style="margin-right: 1.5rem;" href="#web-apps">Web Apps</a>
-            <a style="margin-right: 1.5rem;" href="#chrome-extensions">Chrome Extensions</a>
-            <a style="margin-right: 1.5rem;" href="#art">Art</a>
+            <a class="a" style="margin-right: 1.5rem;" href="#websites">Websites</a>
+            <a class="a" style="margin-right: 1.5rem;" href="#web-apps">Web Apps</a>
+            <a class="a" style="margin-right: 1.5rem;" href="#chrome-extensions">Chrome Extensions</a>
+            <a class="a" style="margin-right: 1.5rem;" href="#art">Art</a>
         </div>
         <br />
 
