Fade only home menu btn

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
     <div id="top-container">
-        <button id="menu-btn" class="hamburger hamburger--squeeze btn" aria-label="Menu">
+        <button id="menu-btn" class="fade hamburger hamburger--squeeze btn" aria-label="Menu">
             <span class="hamburger-box">
                 <span class="hamburger-inner">
             </span>
